--- a/HMAW_UNIVERSE-main/HMAW_UNIVERSE-main/hero-page.html
+++ b/HMAW_UNIVERSE-main/HMAW_UNIVERSE-main/hero-page.html
@@ -143,6 +143,13 @@
         <a href="moonknight.html">Learn More</a>
     </div>
 
+    <div class="hero-card">
+        <img src="images/robin.jpeg" alt="robin">
+        <h2>Robin</h2>
+        <p>Robin is a superhero and also batmans sidekick appearing in American comic books published by DC Comics. Created by artist Bob Kane and writer Bill Finger</p>
+        <a href="robin.html">Learn More</a>
+    </div>
+
         <!-- Add more superhero cards as needed -->
     </div>
 
